<resources>
    <string name="app_name">ParkMe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="fullName">FullName</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">SignUP</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search">Search</string>
    <string name="book">My Bookings</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_booking_fragment">booking</string>
    <string name="map">Map</string>
    <string name="Vehicle_information">Vehicle Information</string>
    <string name="add_card">Add Card</string>
    <string name="choose_duration">Choose Duration</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>

    // stripe keys//
    <string name="PublishableKey">pk_test_51OjOHoCTdoQWDPpqUIigF81EkPKpeEeurB2aw3dfvWQmoXCai6XVsY8sYwm9LSwHdFiLXqusY0kYlD7B9QoGE8oh00kl9NL05E</string>
    <string name="SecretKey">sk_test_51OjOHoCTdoQWDPpqEterXHfQMnrOxluO593psmQ6tLy16kvIXaeYV98zmJmfEIJ2PaC38VTkRT17DRjrnYmB4MyX00l1RtIIWE</string>
    <string name="CustomerId"></string>
    <string name="EphemeralKey"></string>
    <string name="delete_card">Delete</string>
    <string name="remove_card">Remove Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="email_or_username">Email/Username</string>
    <string name="back_button_description">Back Btn\n</string>
    <string name="vehicle_info">VehicleInfo</string>
    <string name="enter_reg">ENTER REG</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="back_button">Backbtn</string>
    <string name="select_date">Select Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="wallet">My Wallet</string>
    <string name="default_notification_channel_id">Default Notification Channel ID</string>
    <string name="filter">Filter</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="google_maps_key">AIzaSyDLQyr8Wnp_uxpefltVDlRsLyRTRvb3oDY</string>
</resources>